[package]
name = "CPSC5200_imageapi"
version = "0.1.0"
authors = ["pete <weisdepp@seattleu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket-multipart-form-data = "0.9.6"
rocket-include-static-resources = "0.9.5"
rocket-raw-response = "0.4.11"
image = "0.23.13"
imageproc = "0.22.0"
bytes = "1.0.1"